[gd_scene load_steps=7 format=2]

[ext_resource path="res://GroundChunk.gd" type="Script" id=1]
[ext_resource path="res://groundnoise.tres" type="OpenSimplexNoise" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.678431, 0.670588, 0.611765, 1 )

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( 0, 0, 0, 0, 0, 0 ),
"array_data": PoolByteArray(  ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 0,
"index_count": 0,
"primitive": 7,
"skeleton_aabb": [  ],
"vertex_count": 0
}

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( 0, 0, 0, 0, 0, 0 ),
"array_data": PoolByteArray(  ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 0,
"index_count": 0,
"primitive": 7,
"skeleton_aabb": [  ],
"vertex_count": 0
}

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( 0, 0, 0, 0, 0, 0 ),
"array_data": PoolByteArray(  ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 0,
"index_count": 0,
"primitive": 7,
"skeleton_aabb": [  ],
"vertex_count": 0
}

[node name="GroundChunk" type="StaticBody"]
input_ray_pickable = false
script = ExtResource( 1 )
material = SubResource( 1 )
noise = ExtResource( 2 )
noise_scale = 0.2
chunk_size = 32
collision = false

[node name="HighLOD" type="MeshInstance" parent="."]
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="MediumLOD" type="MeshInstance" parent="."]
visible = false
material_override = SubResource( 1 )
mesh = SubResource( 3 )
material/0 = null

[node name="LowLOD" type="MeshInstance" parent="."]
visible = false
material_override = SubResource( 1 )
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
visible = false
disabled = true
